--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@
                 >
               </div>
               <div>
-                <span class="about-info-title">06+</span>
+                <span class="about-info-title">0</span>
                 <span class="about-info-name"
                   >Companies <br />
                   worked</span
