--- a/index.html
+++ b/index.html
@@ -202,7 +202,7 @@
 
       <!-- skills and qualification  -->
       <section class="skills section" id="skills">
-        <h2 class="section-title">Skills & Experiences </h2>
+        <h2 class="section-title">Skills & Abilities </h2>
         <span class="section-subtitle">My Technical Skills</span>
         <div class="skills-content container">
           <div class="skills-name">JavaScript</div>
